# GWSamplegen

./: .gitignore  CLAUDE.md  README.md  SNR.sh  SNR_np.sh  SNR_series.py  __init__.py  asyncSNR.py  asyncSNR_np.py  bank.sh  configGen.ipynb  fetch_noise.py  fetch_noise.sh  find_bns.py  find_glitches.py  generate_SNR.sh  generate_bank.py  generate_bank.sh  generate_bank.sub  generate_configs.py  generate_configs.sh  noiseGen.ipynb  pyproject.toml  test.npy
GWSamplegen/: __init__.py  glitch_utils.py  noise_utils.py  snr_utils_np.py  waveform_utils.py
GWSamplegen/mldatafind/: authenticate.py  find.py  io.py
GWSamplegen/segments/: event_gpstimes.json
share/: SNR_np.sh  args.json  asyncSNR.py  asyncSNR_np.py  generate_configs.py  generate_configs.sh
template_banks/: PyCBC_98_aligned_spin.txt
utils/: SNR_utils.py  glitch_utils.py  matched_filter.py  noise_utils.py  snr_utils_np.py  waveform_utils.py
utils/mldatafind/: find.py
